--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ src/Verify.Tests/Tests.StreamNegative.verified.bin
 src/Verify.Tests/Tests.StreamMultipleNegative.00.verified.bin
 src/Verify.Tests/Tests.StreamMultipleNegative.01.verified.bin
 src/Verify.Tests/Tests.TextNegative.verified.tmp
+*.ncrunchproject
