--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ src/Verify.Tests/Tests.StreamMultipleNegative.00.verified.bin
 src/Verify.Tests/Tests.StreamMultipleNegative.01.verified.bin
 src/Verify.Tests/Tests.TextNegative.verified.tmp
 *.ncrunchproject
+*nCrunchTemp*
