--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -20,7 +20,7 @@ build_script:
         sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
       }
     }
-- dotnet workload restore src/Verify.sln
+- dotnet workload restore src/Verify.sln --include-previews
 - dotnet build src --configuration Release --nologo
 - dotnet test src --configuration Release --no-build --no-restore --nologo
 
