--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -21,6 +21,7 @@ build_script:
       }
     }
 - dotnet workload restore src/Verify.sln --include-previews
+- dotnet workload install wasm-tools
 - dotnet build src --configuration Release --nologo
 - dotnet test src --configuration Release --no-build --no-restore --nologo
 
