--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -10,6 +10,10 @@ build_script:
     if ($isWindows) {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
       ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
+      dotnet workload restore src/Verify.sln --include-previews
+      dotnet workload install wasm-tools
+      dotnet workload install macos
+      dotnet workload install ios
     }
     else {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
@@ -19,11 +23,11 @@ build_script:
       } else {
         sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
       }
+      sudo dotnet workload restore src/Verify.sln --include-previews
+      sudo dotnet workload install wasm-tools
+      sudo dotnet workload install macos
+      sudo dotnet workload install ios
     }
-- dotnet workload restore src/Verify.sln --include-previews
-- dotnet workload install wasm-tools
-- dotnet workload install macos
-- dotnet workload install ios
 - dotnet build src --configuration Release --nologo
 - dotnet test src --configuration Release --no-build --no-restore --nologo
 
