Previous visual studio 2022 (#724)

--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -1,5 +1,5 @@
 image:
-- Visual Studio 2022
+- Previous Visual Studio 2022
 - macOS
 - Ubuntu
 environment:
@@ -10,27 +10,30 @@ build_script:
     if ($isWindows) {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
       ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
-      dotnet workload restore src/Verify.sln --include-previews
+      dotnet workload restore src/Verify.sln
       dotnet workload install wasm-tools
       dotnet workload install macos
       dotnet workload install ios
+      dotnet workload install android
     }
     if ($isMacOS) {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
       sudo chmod u+x dotnet-install.sh
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/local/share/dotnet'
-      sudo dotnet workload restore src/Verify.sln --include-previews
+      sudo dotnet workload restore src/Verify.sln
       sudo dotnet workload install wasm-tools
       sudo dotnet workload install macos
       sudo dotnet workload install ios
+      sudo dotnet workload install android
     }
     if ($isLinux) {
       Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
       sudo chmod u+x dotnet-install.sh
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
-      sudo dotnet workload restore src/Verify.sln --include-previews
+      sudo dotnet workload restore src/Verify.sln
       sudo dotnet workload install wasm-tools
       sudo dotnet workload install macos
+      sudo dotnet workload install android
     }
 - dotnet build src --configuration Release --nologo
 - dotnet test src --configuration Release --no-build --no-restore --nologo
