--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -19,4 +19,8 @@
     <Using Include="System.Linq.Expressions" />
     <Using Include="System.Collections.Specialized" />
   </ItemGroup>
+  <ItemGroup Condition="$(TargetFramework) == 'net6.0' OR $(TargetFramework) == 'net7.0' ">
+    <Using Include="System.DateOnly" Alias="Date" />
+    <Using Include="System.TimeOnly" Alias="Time" />
+  </ItemGroup>
 </Project>
