--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -19,7 +19,7 @@
     <Using Include="System.Linq.Expressions" />
     <Using Include="System.Collections.Specialized" />
   </ItemGroup>
-  <ItemGroup Condition="$(TargetFramework) == 'net6.0' OR $(TargetFramework) == 'net6.0-ios' OR $(TargetFramework) == 'net6.0-android' OR $(TargetFramework) == 'net7.0' ">
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net6')) OR $(TargetFramework.StartsWith('net7')) ">
     <Using Include="System.DateOnly" Alias="Date" />
     <Using Include="System.TimeOnly" Alias="Time" />
   </ItemGroup>
