--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -8,7 +8,7 @@ environment:
 build_script:
 - pwsh: |
     if ($isWindows) {
-      Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1"
       ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
       dotnet workload restore src/Verify.sln
       dotnet workload install wasm-tools
@@ -17,7 +17,7 @@ build_script:
       dotnet workload install android
     }
     if ($isMacOS) {
-      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh"
       sudo chmod u+x dotnet-install.sh
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/local/share/dotnet'
       sudo dotnet workload restore src/Verify.sln
@@ -27,7 +27,7 @@ build_script:
       sudo dotnet workload install android
     }
     if ($isLinux) {
-      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh" -OutFile "./dotnet-install.sh"
+      Invoke-WebRequest "https://dot.net/v1/dotnet-install.sh"
       sudo chmod u+x dotnet-install.sh
       sudo ./dotnet-install.sh --jsonfile src/global.json --architecture x64 --install-dir '/usr/share/dotnet'
       sudo dotnet workload restore src/Verify.sln
