--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT'">net462;net472;net48</TargetFrameworks>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' AND $(Configuration) == 'Release' ">$(TargetFrameworks);net6.0-android;net6.0-ios</TargetFrameworks>
-    <TargetFrameworks>$(TargetFrameworks);netstandard2.0;netstandard2.1;netcoreapp3.1;netcoreapp3.0;netcoreapp2.2;netcoreapp2.1;net5.0;net6.0</TargetFrameworks>
+    <!--<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' AND $(Configuration) == 'Release' ">$(TargetFrameworks);net6.0-android;net6.0-ios</TargetFrameworks>-->
+    <!--<TargetFrameworks>$(TargetFrameworks);netstandard2.0;netstandard2.1;netcoreapp3.1;netcoreapp3.0;netcoreapp2.2;netcoreapp2.1;net5.0;net6.0</TargetFrameworks>-->
     <DiffEngine>true</DiffEngine>
     <DiffEngine Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios' OR $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android' ">false</DiffEngine>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">10.0</SupportedOSPlatformVersion>
@@ -23,7 +23,7 @@
     <Using Include="System.Xml" />
     <Using Include="System.Runtime.Versioning" />
     <Using Include="System.Runtime.InteropServices" />
-    
+
     <PackageReference Include="DiffEngine" Version="11.0.0" />
     <PackageReference Include="EmptyFiles" Version="4.1.0" PrivateAssets="None" />
     <PackageReference Include="SimpleInfoName" Version="2.0.0" />
