--- a/src/Verify.MSTest/Verify.MSTest.csproj
+++ b/src/Verify.MSTest/Verify.MSTest.csproj
@@ -11,6 +11,8 @@
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
     <Using Include="VerifyTests" />
     <Using Include="Argon" />
+    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.1" PrivateAssets="All" />
+    <PackageReference Include="Fody" Version="6.6.4" PrivateAssets="All" />
     <PackageReference Include="ProjectDefaults" Version="1.0.84" PrivateAssets="all" />
     <PackageReference Include="EmptyFiles" Version="4.1.0" PrivateAssets="None" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
