--- a/src/Verify.Tests/Verify.Tests.csproj
+++ b/src/Verify.Tests/Verify.Tests.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="ProjectDefaults" Version="1.0.84" PrivateAssets="all" />
     <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
     <ProjectReference Include="..\Verify.ClipboardAccept\Verify.ClipboardAccept.csproj" />
+    <ProjectReference Include="..\Verify.SamplePlugin\Verify.SamplePlugin.csproj" />
     <ProjectReference Include="..\Verify.Xunit\Verify.Xunit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
     <None Update="sample*.*" CopyToOutputDirectory="PreserveNewest" />
