--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -1,5 +1,7 @@
 image:
 - Previous Visual Studio 2022
+- macOS
+- Ubuntu
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
