--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -3,6 +3,7 @@ image:
 - macOS
 - Ubuntu
 environment:
+  DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 build_script:
