use spans in MatchingFileFinder

--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -8,6 +8,8 @@
     <DefineConstants>$(DefineConstants);DiffEngine</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.5" Condition="'$(TargetFrameworkIdentifier)' == '.NETStandard' OR '$(TargetFrameworkIdentifier)' == '.NETFramework'" />
+    <Using Include="System.ReadOnlySpan&lt;System.Char&gt;" Alias="CharSpan" />
     <Using Remove="System.Net.Http" />
     <Using Include="Argon" />
     <Using Include="VerifyTests" />
