fewer tf in nullcomparer

--- a/src/NullComparer/NullComparer.csproj
+++ b/src/NullComparer/NullComparer.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <OutputType Condition=" '$(OS)' == 'Windows_NT' ">WinExe</OutputType>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">net462;net48</TargetFrameworks>
-    <TargetFrameworks>$(TargetFrameworks);net6.0;netcoreapp3.1;netcoreapp3.0;netcoreapp2.1</TargetFrameworks>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <SignAssembly>true</SignAssembly>
