--- a/src/Verify.ApprovalTestsTransition/Verify.ApprovalTestsTransition.csproj
+++ b/src/Verify.ApprovalTestsTransition/Verify.ApprovalTestsTransition.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Using Remove="System.Net.Http" />
