--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -8,7 +8,7 @@
     <DefineConstants>$(DefineConstants);DiffEngine</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Polyfill" Version="0.8.0" PrivateAssets="All" />
+    <PackageReference Include="Polyfill" Version="0.9.0" PrivateAssets="All" />
     <PackageReference Include="System.Memory" Version="4.5.5" Condition="'$(TargetFrameworkIdentifier)' == '.NETStandard' OR '$(TargetFrameworkIdentifier)' == '.NETFramework'" />
     <Using Include="System.ReadOnlySpan&lt;System.Char&gt;" Alias="CharSpan" />
     <Using Remove="System.Net.Http" />
@@ -29,10 +29,8 @@
     <PackageReference Include="SimpleInfoName" Version="2.1.1" />
     <PackageReference Include="Argon" Version="0.5.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.89" PrivateAssets="all" />
-    <PackageReference Include="System.ValueTuple"
-                      Version="4.5.0"
-                      Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net462'" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.90" PrivateAssets="all" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net462'" />
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="buildTransitive\Verify.props" />
     <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="buildTransitive\Verify.targets" />
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="build\Verify.props" />
