--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Polyfill" Version="0.21.0" PrivateAssets="all" />
-    <PackageReference Include="System.Memory" Version="4.5.5" Condition="'$(TargetFrameworkIdentifier)' == '.NETStandard' OR '$(TargetFrameworkIdentifier)' == '.NETCOREAPP'" />
+    <PackageReference Include="System.Memory"
+                      Version="4.5.5"
+                      Condition="$(TargetFrameworkIdentifier) == '.NETStandard' or
+                                 $(TargetFrameworkIdentifier) == '.NETFramework' or
+                                 $(TargetFramework.StartsWith('netcoreapp2'))" />
     <Using Include="System.ReadOnlySpan&lt;System.Char&gt;" Alias="CharSpan" />
     <Using Remove="System.Net.Http" />
     <Using Include="Argon" />
@@ -30,7 +34,9 @@
     <PackageReference Include="Argon" Version="0.5.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
     <PackageReference Include="ProjectDefaults" Version="1.0.90" PrivateAssets="all" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net462'" />
+    <PackageReference Include="System.ValueTuple"
+                      Version="4.5.0"
+                      Condition="$(TargetFramework.StartsWith('net46'))" />
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="buildTransitive\Verify.props" />
     <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="buildTransitive\Verify.targets" />
     <None Include="buildTransitive\Verify.props" Pack="true" PackagePath="build\Verify.props" />
