--- a/src/Verify.Xunit.DerivePaths.Tests/Verify.Xunit.DerivePaths.Tests.csproj
+++ b/src/Verify.Xunit.DerivePaths.Tests/Verify.Xunit.DerivePaths.Tests.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>Verify.DerivePaths.Tests</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
