--- a/src/Verify/Verify.csproj
+++ b/src/Verify/Verify.csproj
@@ -38,7 +38,7 @@
     <None Include="buildTransitive\Verify.targets" Pack="true" PackagePath="build\Verify.targets" />
   </ItemGroup>
 
-  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0' OR $(TargetFramework) == 'net462' OR $(TargetFramework) == 'net472' OR $(TargetFramework) == 'net48' OR $(TargetFramework) == 'netcoreapp2.2' OR $(TargetFramework) == 'netcoreapp2.1'">
+  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0' OR $(TargetFrameworkIdentifier) == '.NETFramework' OR $(TargetFramework) == 'netcoreapp2.2' OR $(TargetFramework) == 'netcoreapp2.1'">
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
   </ItemGroup>
 
