remove redundant Windows_NT

--- a/src/Verify.ApprovalTestsTransition/Verify.ApprovalTestsTransition.csproj
+++ b/src/Verify.ApprovalTestsTransition/Verify.ApprovalTestsTransition.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT'">net472;net48</TargetFrameworks>
-    <TargetFrameworks>$(TargetFrameworks);net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net472;net48;net6.0;net7.0;net8.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ProjectDefaults" Version="1.0.91" PrivateAssets="all" />
