--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,6 @@ src/Verify/EmptyFiles/* binary
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
 *.verified.xml text eol=lf working-tree-encoding=UTF-8
 *.verified.json text eol=lf working-tree-encoding=UTF-8
+
+src/.editorconfig text eol=lf working-tree-encoding=UTF-8
+*.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
