--- a/.github/workflows/on-tag-do-release.yml
+++ b/.github/workflows/on-tag-do-release.yml
@@ -1,19 +1,15 @@
 name: on-tag-do-release
 on:
-  push:
-    tags:
-      - '[0-9]+\.[0-9]+\.[0-9]+'
+  milestone:
+    types: [closed]
 jobs:
-  release:
-    runs-on: windows-latest
+  create-release-notes:
+    runs-on: ubuntu-latest
     steps:
-    - name: Run
-      run: |
-        dotnet tool install --global GitReleaseManager.Tool --version 0.14.0
-        tag="${GITHUB_REF:10}"
-        owner="${GITHUB_REPOSITORY%/*}"
-        repo="${GITHUB_REPOSITORY#*/}"
-        dotnet-gitreleasemanager create -m ${tag} --token ${{secrets.GITHUB_TOKEN}} -o ${owner} -r ${repo}
-        dotnet-gitreleasemanager close -m ${tag} --token ${{secrets.GITHUB_TOKEN}} -o ${owner} -r ${repo}
-        dotnet-gitreleasemanager publish -t ${tag} --token ${{secrets.GITHUB_TOKEN}} -o ${owner} -r ${repo}
-      shell: bash
+    - uses: actions/checkout@master
+    - name: Create Release Notes
+      uses: docker://decathlon/release-notes-generator-action:3.1.6
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        OUTPUT_FOLDER: temp_release_notes
+        USE_MILESTONE_TITLE: "true"
