--- a/.github/workflows/on-tag-do-release.yml
+++ b/.github/workflows/on-tag-do-release.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Create Release Notes
-      uses: docker://decathlon/release-notes-generator-action:3.1.6
+      uses: Decathlon/release-notes-generator-action@v3.1.6
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         OUTPUT_FOLDER: temp_release_notes
