--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 *.zip binary
 
 src/Verify/EmptyFiles/* binary
+*NonStandardEncoding* binary
 
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
 *.verified.xml text eol=lf working-tree-encoding=UTF-8
