--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,5 @@ src/Verify/EmptyFiles/* binary
 
 src/.editorconfig text eol=lf working-tree-encoding=UTF-8
 *.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
+
+*NonStandardEncoding* binary
