--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -41,7 +41,8 @@ build_script:
 - dotnet test src/Verify.Tests --configuration Release --no-build --no-restore
 - dotnet test src/Verify.Xunit.DerivePaths.Tests --configuration Release --no-build --no-restore
 - dotnet test src/Verify.Xunit.Tests --configuration Release --no-build --no-restore
-- dotnet fixie src/Verify.Fixie.Tests --configuration Release --no-build --no-restore
+- cd src/Verify.Fixie.Tests
+- dotnet fixie
 
 #- pwsh: |
 #    if ($isWindows) {
