--- a/src/Verify.Fixie/Verify.Fixie.csproj
+++ b/src/Verify.Fixie/Verify.Fixie.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
+    <TestProject>false</TestProject>
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2" PrivateAssets="All" />
