--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ src/Verify.Tests/Tests.TextNegative.verified.tmp
 *nCrunchTemp*
 *.cache
 src/Verify.Tests/NewLineTests.StringWithDifferingNewline.verified.txt
+src/Verify.MSTest.Tests/Tests.AutoVerifyHasAttachment.verified.txt
