--- a/src/Verify.NUnit.DerivePaths.Tests/Verify.NUnit.DerivePaths.Tests.csproj
+++ b/src/Verify.NUnit.DerivePaths.Tests/Verify.NUnit.DerivePaths.Tests.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="ProjectDefaults" Version="1.0.126" PrivateAssets="all" />
     <ProjectReference Include="..\Verify.NUnit\Verify.NUnit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
+    <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
+    <Using Include="NUnit.Framework.Assert" Static="True" />
   </ItemGroup>
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.targets" />
